--- a/index.html
+++ b/index.html
@@ -14,20 +14,31 @@
           <div class="btns">
             <button class="btn btn-fill">Filling</button>
             <div class="thin-line">
-              <label for="range">Thin of line</label>
-              <input type="range" name="range" id="range" min="0.1" max="5.0" value="2.5" step="0.1">
+              <label for="range">Thin of line - 2.5px</label>
+              <input type="range" name="range" id="range" min="1" max="5.0" value="2.5" step="0.5" list="markers"/>
+              <datalist id="markers">
+                <option value="1" label="1"></option>
+                <option value="1.5" label="1.5"></option>
+                <option value="2" label="2"></option>
+                <option value="2.5" label="2.5"></option>
+                <option value="3" label="3"></option>
+                <option value="3.5" label="3.5"></option>
+                <option value="4" label="4"></option>
+                <option value="4.5" label="4.5"></option>
+                <option value="5" label="5"></option>
+              </datalist>
             </div>
             <button class="btn btn-save">Save</button>
           </div>
           <div class="colors">
-            <div class="color" data-color="black"></div>
-            <div class="color" data-color="white"></div>
-            <div class="color" data-color="red"></div>
-            <div class="color" data-color="brown"></div>
-            <div class="color" data-color="yellow"></div>
-            <div class="color" data-color="green"></div>
+            <div class="color" data-color="rgba(0, 0, 0, 1)"></div>
+            <div class="color" data-color="rgba(255, 255, 255, 1)"></div>
+            <div class="color" data-color="rgba(255, 0, 0, 1)"></div>
+            <div class="color" data-color="rgba(165, 42, 42, 1)"></div>
+            <div class="color" data-color="rgba(255, 255, 0, 1)"></div>
+            <div class="color" data-color="rgba(0, 128, 0, 1)"></div>
             <div class="color" data-color="rgba(0, 0, 255, 0.5)"></div>
-            <div class="color" data-color="darkblue"></div>
+            <div class="color" data-color="rgba(0, 0, 139, 1)"></div>
             <div class="color" data-color="rgba(133, 23, 161, 0.88)"></div>
             </div>
         </div>
