--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="thin-line">
               <label for="range">Thin of line - 2.5px</label>
               <div class="range-line"></div>
-              <input type="range" name="range" id="range" min="1" max="5.0" value="2.5" step="0.5" list="markers"/>
+              <input type="range" name="range" id="range" min="1" max="7.0" value="2.5" step="0.5" list="markers"/>
               <datalist id="markers">
                 <option value="1" label="1,0"></option>
                 <option value="1.5" label="1,5"></option>
@@ -28,9 +28,16 @@
                 <option value="4" label="4,0"></option>
                 <option value="4.5" label="4,5"></option>
                 <option value="5" label="5,0"></option>
+                <option value="5.5" label="5,5"></option>
+                <option value="6" label="6,0"></option>
+                <option value="6.5" label="6,5"></option>
+                <option value="7" label="7,0"></option>
               </datalist>
             </div>
-            <button class="btn btn-save">Save</button>
+            <div class="btns-right">
+              <button class="btn btn-clear">Clear</button>
+              <button class="btn btn-save">Save</button>
+            </div>
           </div>
           <div class="colors">
             <div class="color" data-color="rgba(44, 44, 44, 1)"></div>
