--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <div class="btns">
             <div class="mode">
               <label class="mode-label" for="mode">Filling <-> Drawing</label>
-            <button class="btn btn-mode" id="mode">Filling</button>
+            <button class="btn btn-mode" id="mode">Drawing</button>
             </div>
             <div class="thin-line">
               <label for="range">Line thickness - 2.5px</label>
